@@ -1,12 +1,14 @@
-;;; pel-indent.el --- PEL Indentation utilities -*-lexical-binding: t-*-
+;;; pel-indent.el --- PEL indentation utilities.  -*- lexical-binding: t; -*-
 
-;; Copyright (C) 2020  Pierre Rouleau
+;; Created   : Saturday, February 29 2020.
+;; Author    : Pierre Rouleau <prouleau001@gmail.com>
+;; Time-stamp: <2020-11-05 15:11:13, updated by Pierre Rouleau>
 
-;; Author: Pierre Rouleau <prouleau001@gmail.com>
-
-;; This file is part of the PEL package
+;; This file is part of the PEL package.
 ;; This file is not part of GNU Emacs.
 
+;; Copyright (C) 2020  Pierre Rouleau
+;;
 ;; This program is free software: you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
 ;; the Free Software Foundation, either version 3 of the License, or
@@ -20,93 +22,178 @@
 ;; You should have received a copy of the GNU General Public License
 ;; along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-;; -----------------------------------------------------------------------------
+;;; --------------------------------------------------------------------------
 ;;; Commentary:
 ;;
-;; CAUTION: This file is in very early stage of development.
-;; The goal is to provide a consistent handling of indentation that makes
-;; sense for all sorts of file types.
-;; To do that, a need to review the way indentation works for a large
-;; number of files is required and will take some time.  This meancs that the
-;; design of this file and the functions it provides is very likely to change
-;; until this analysis is completed.
+;; This file provides rigid indentation support.  It is meant to be used in
+;; files where the super useful automatic indentation of the function
+;; `indent-for-tab-command' is used (and assigned to the tab key).
 ;;
-;; TODO: complete indentation behaviour analysis for at least: C, C++, python,
-;;       Emacs Lisp, Erlang, Rust, Haskell, makefile, text modes, Org mode,
-;;       etc...
+;; The force rigid indentation is needed in several scenarios.  It's not that
+;; useful for edit Lisp source code but is useful for other modes such as C
+;; and other curly bracket programming languages as well as indentation
+;; sensitive programming languages like Python.
+;;
+;; 3 commands are provided:
+;;
+;; - Function `pel-indent-lines' and `pel-unindent-lines' rigidly indent and
+;;   un-indent the region by a specified number of indentation levels which
+;;   defaults to 1.
+;; - Function `pel-indent-rigidly' allows interactive indentation by 1
+;;   character at a time or indentation level at a time.
+;;
+;; The number of columns used for the indentation level used by the functions
+;; `pel-indent-lines' and 'pel-unindent-lines' is returned by the function
+;; `pel-indent-level-colums'.
 
-;; -----------------------------------------------------------------------------
+;;; --------------------------------------------------------------------------
+;;; Dependencies:
+;;
+;;
+
+;;; --------------------------------------------------------------------------
 ;;; Code:
-(require 'cc-vars)                      ; uses: c-basic-offset
-(defvar c-basic-offset) ; declare it locally to prevent lint warning
 
-;; --
-(defun pel--insert-c-indent-line (&optional n)
-  "Insert N times the `c-basic-offset' space characters on current line."
-  (let ((n (prefix-numeric-value n)))
+;; ---------------------------------------------------------------------------
+;; TODO: enhance pel-indent-level-columns to better consider various types of
+;; files for various programming and markup languages.
+
+(defun pel-indent-level-columns (&optional n)
+  "Return the number of columns corresponding to 1 (or N) indentation levels.
+The indentation level depends on the type of buffer."
+  (let ((cols-by-indentation-level   (if (and (boundp 'c-basic-offset)
+                                              (integerp c-basic-offset))
+                                         c-basic-offset
+                                       tab-width)))
+    (* (or n 1) cols-by-indentation-level)))
+
+(defun pel-indent-marked-lines ()
+  "Return information about currently marked lines.
+The returned value is a list of 3 elements:
+- line number of the first line in the region
+- line number of the last line in the region
+- symbol 'point-before-mark or 'mark-before-point."
+  (list
+   (line-number-at-pos (region-beginning))
+   (line-number-at-pos (region-end))
+   (if (< (point) (mark))
+       'point-before-mark
+     'mark-before-point)))
+
+(defun pel-indent-line-pos (line at-end)
+  "Return position of specified LINE at its first character unless AT-END."
+  (save-excursion
+    (goto-char (point-min))
+    (forward-line (1- line))
+    (if at-end
+        (move-end-of-line nil)
+      (move-beginning-of-line nil))
+    (point)))
+
+(defun pel-indent-mark-lines (first-line end-line order)
+  "Mark a region of lines identified by the arguments.
+FIRST-LINE := line number of the first line in the region
+END-LINE   := line number of the last line in the region
+ORDER      := symbol.  One of 'point-before-mark or 'mark-before-point.
+The ORDER argument identifies the relative position of the point and mark
+in the region created by the function."
+  (cond ((eq order 'point-before-mark)
+         (goto-char (pel-indent-line-pos first-line nil))
+         (set-mark  (pel-indent-line-pos end-line t)))
+        ((eq order 'mark-before-point)
+         (set-mark  (pel-indent-line-pos first-line nil))
+         (goto-char (pel-indent-line-pos end-line t)))
+        (t
+         (error "Invalid order argument value: %s" order))))
+
+
+(defun pel-indent-mark-lines-by-spec (marked-lines-spec)
+  "Mark a region of lines identified by the MARKED-LINES-SPEC argument.
+The MARKED-LINES-SPEC argument is a list with the following 3 elements:
+- line number of the first line in the region
+- line number of the last line in the region
+- symbol 'point-before-mark or 'mark-before-point."
+  (pel-indent-mark-lines (nth 0 marked-lines-spec)
+                         (nth 1 marked-lines-spec)
+                         (nth 2 marked-lines-spec)))
+
+(defun pel--insert-c-indent-line (n)
+  "Insert N times the indentation level number of space chars on current line."
     (if (< n 0)
-        (pel-unindent (abs n))
-      (insert (make-string (* c-basic-offset n) ?\s)))))
+        (pel-unindent-lines (abs n))
+      (move-beginning-of-line nil)
+      (insert (make-string (pel-indent-level-columns n) ?\s))))
+
 
 ;;-pel-autoload
-(defun pel-insert-c-indent (&optional n)
-  "Insert N times `c-basic-offset' spaces on current or marked line(s).
+(defun pel-indent-lines (&optional n)
+  "Insert current or marked lines by N indentation levels.
 A special argument N can specify more than one
 indentation level.  It defaults to 1.
-If a negative number is specified, `pel-unindent' is used.
-If region was marked, the function does not deactivate it to allow
-repeated execution of the command."
+If a negative number is specified, `pel-unindent-lines' is used.
+If a region was marked, the function does not deactivate it to allow
+repeated execution of the command.  It also modifies the region to
+include all characters in all affected lines."
   (interactive "*P")
-  (save-excursion
+  (let ((n (prefix-numeric-value n)))
     (if (use-region-p)
-        (let ((begin-point (region-beginning))
+        (let ((original-region-spec (pel-indent-marked-lines))
+              (begin-point (region-beginning))
               (line-count (count-lines (region-beginning) (region-end)))
-              ;; by default all insertion commands set the var deactivate-mark
-              ;; to force mark deactivation.
-              ;; Prevent this by creating a local binding.
-              deactivate-mark)
+              ;; Normally, Emacs deactivates the region right after a command
+              ;; has executed.  To prevent this, and allow region to stay
+              ;; active and visible for further execution of this command,
+              ;; set the deactivate-mark variable to nil for this form.
+              (deactivate-mark nil))
+          (deactivate-mark)
           (goto-char begin-point)
           (dotimes (_i line-count)
             (pel--insert-c-indent-line n)
             (forward-line 1))
-          (set-mark begin-point))
+          (pel-indent-mark-lines-by-spec original-region-spec))
       (pel--insert-c-indent-line n))))
 
 ;; --
 (defun pel--line-unindent (&optional n)
-  "Un-indent current line by N times `c-basic-offset' spaces.
+  "Un-indent current line by N indentation levels.
 Works when point is anywhere on the line.
 Limitation: does not handle hard tabs and may move point."
   (back-to-indentation)
   (let ((n (prefix-numeric-value n)))
     (when (> (current-column) 0)
-      (left-char (min (current-column) (* c-basic-offset n)))
+      (left-char (min (current-column) (pel-indent-level-columns n)))
       (if (and (require 'pel-ccp nil :no-error)
                (fboundp 'pel-delete-to-next-visible))
           (pel-delete-to-next-visible)
         (error "Function pel-delete-to-next-visible is not loaded")))))
 
 ;;-pel-autoload
-(defun pel-unindent (&optional n)
-  "Un-indent current line or marked region by N times `c-basic-offset' spaces.
+(defun pel-unindent-lines (&optional n)
+  "Un-indent current line or marked region by N indentation levels.
 Works when point is anywhere on the line.
 If region was marked, the function does not deactivate it to allow
 repeated execution of the command.
+If a region was marked, the function does not deactivate it to allow
+repeated execution of the command.  It also modifies the region to
+include all characters in all affected lines.
 Limitation: does not handle hard tabs."
   (interactive "*P")
   (save-excursion
     (if (use-region-p)
-        (let ((begin-point (region-beginning))
+        (let ((original-region-spec (pel-indent-marked-lines))
+              (begin-point (region-beginning))
               (line-count (count-lines (region-beginning) (region-end)))
-              ;; by default all insertion commands set the var deactivate-mark
-              ;; to force mark deactivation.
-              ;; Prevent this by creating a local binding.
-              deactivate-mark)
+              ;; Normally, Emacs deactivates the region right after a command
+              ;; has executed.  To prevent this, and allow region to stay
+              ;; active and visible for further execution of this command,
+              ;; set the deactivate-mark variable to nil for this form.
+              (deactivate-mark nil))
+          (deactivate-mark)
           (goto-char begin-point)
           (dotimes (_i line-count)
             (pel--line-unindent n)
             (forward-line 1))
-          (set-mark begin-point))
+          (pel-indent-mark-lines-by-spec original-region-spec))
       (pel--line-unindent n))))
 
 ;;-pel-autoload
@@ -133,7 +220,7 @@ by the numeric argument N (or if not specified N=1):
         (error "The pel-mark functions are not loaded")))
     (indent-rigidly (region-beginning) (region-end) nil t)))
 
-;; -----------------------------------------------------------------------------
+;;; --------------------------------------------------------------------------
 (provide 'pel-indent)
 
 ;;; pel-indent.el ends here
